Fix and rename clipped policy icon

--- a/frontend/pages/policies/ManagePoliciesPage/_styles.scss
+++ b/frontend/pages/policies/ManagePoliciesPage/_styles.scss
@@ -151,7 +151,7 @@
     font-weight: $regular;
   }
 
-  .policy-icon {
+  .critical-policy-icon {
     margin-left: 1px;
     position: relative;
   }
